<resources>
    <string name="app_name">TUTORIUS</string>
    <string name="uvus">Usuario UVUS</string>
    <string name="password">Contraseña</string>
    <string name="remember_pass">¿Olvidaste tu contraseña?</string>
    <string name="login">Entrar</string>
    <string name="page1">Departamentos</string>
    <string name="page2">Asignaturas</string>
    <string name="page3">Profesores</string>
    <string name="search">Buscar</string>
    <string name="alumno_name">Nombre de Alumno</string>
    <string name="addsubject">Busca una asignatura</string>
    <string name="add">Añadir</string>
    <string name="name">Nombre:</string>
    <string name="email">Email:</string>
    <string name="asignaturas">Asignaturas impartidas:</string>
    <string name="horario">Horario de Tutorías:</string>
    <string name="departamento">Departamento:</string>.
    <string name="despacho">Despacho:</string>
    <string name="title_activity_cabecera_alumno">Cabecera_alumno</string>
    <string name="editProfile">Editar perfil</string>
    <string name="title_activity_editar_perfil_profesor">EditarPerfilProfesor</string>
    <string name="update">Actualizar</string>
    <string name="PedirCitaProf">Pedir cita</string>
    <string name="modificarhorario">Modificar Horario</string>
    <string name="modificarasigs">Modificar Asignaturas</string>
    <string name="addasig">Siglas Asignaturas</string>
    <string name="addasignatura">Añadir una nueva asignatura:</string>
    <string name="addhorario">Añadir una nueva franja de tutoria</string>
    <string name="dia_semana">Día de la semana:</string>
    <string name="hora_inicio">Hora comienzo:</string>
    <string name="hora_fin">Hora fin:</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Strings para las etiquetas de la Activity activity_profesor
    <string name="tab1_profesor">Hoy</string>
    <string name="tab2_profesor">Mañana</string>
    <string name="tab3_profesor">Pasado mañana</string>
    <string name="some_text">
     Some North American Countries!
 </string>
    <string name="check_toast">Seleccionado: </string>

    <string name="delete">Eliminar</string>
    <string name="datos_profesor">Datos Profesor</string>
    <string name="title_activity_datos_cita">Citas Pendientes</string>
    <string name="datos_cita">Datos de la Cita</string>
    <string name="eliminar_cita">Eliminar cita</string>
    <string name="fecha">FECHA</string>
    <string name="hora">HORA</string>
    <string name="depart">DEPART</string>@string/hour
    <string name="hour">Hora</string>
    <string name="date">Fecha</string>
    <string name="elige_dia">Elige un día para la cita: </string>
    <string name="elige_hora">Elige una hora para la cita: </string>
    <string name="profesor">Profesor: </string>
    <string name="hora1">Hora: </string>
    <string name="fecha1">Fecha: </string>
    <string name="dia">Día de la semana: </string>
    <string name="guardar_cita">Guardar cita</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="disponibilidad2">Disponibilidad:</string>



</resources>
