<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modificar_horario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tutorius.tutorius.ModificarHorario">

    <TextView
        android:text="@string/addhorario"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView2"
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/dia_semana"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:layout_weight="1"
            android:textAlignment="center"/>


        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dia_semana"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <TextView
            android:text="@string/hora_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hora_inicio"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    <TextView
        android:text="@string/hora_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:layout_weight="1"
        android:textAlignment="center"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hora_fin"
        android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_franja"
        android:layout_gravity="center" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:id="@+id/list_horario" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delhorario"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>


</LinearLayout>
