<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar_perfil_profesor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tutorius.tutorius.EditarPerfilProfesor">

    <Button
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:id="@+id/update"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update"
        android:layout_centerHorizontal="true"
        android:id="@+id/errores" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/textView10"
        android:layout_alignRight="@+id/update"
        android:layout_alignEnd="@+id/update" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/departamento"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <Button
        android:text="@string/modificarasigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modificarasigs"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/despacho"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/modificarhorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modificarhorario"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/modificarasigs"
        android:layout_alignRight="@+id/modificarasigs"
        android:layout_alignEnd="@+id/modificarasigs"
        android:layout_toEndOf="@+id/textView12"
        android:layout_alignLeft="@+id/modificarasigs"
        android:layout_alignStart="@+id/modificarasigs" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/departamento" />

    <TextView
        android:text="@string/despacho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="Departamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/departamento"
        android:layout_alignStart="@+id/departamento"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/despacho"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

</RelativeLayout>
