<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_coger_cita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorius.tutorius.Coger_cita">

    <include layout="@layout/activity_cabecera_alumno"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/datos_cita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="61dp"
            android:id="@+id/textView11"
            android:textSize="20dp"/>

        <TextView
            android:text="@string/profesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="14dp"
            android:id="@+id/textView14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView14"
            android:layout_alignRight="@+id/textView11"
            android:layout_alignEnd="@+id/textView11"
            android:id="@+id/profesor"
            android:text="aaaaaaaaa" />

        <TextView
            android:text="@string/dia_semana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:id="@+id/textView19"
            android:layout_below="@+id/textView14"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14" />

        <TextView
            android:text="aaaaaaaaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView19"
            android:layout_toRightOf="@+id/profesor"
            android:layout_toEndOf="@+id/profesor"
            android:id="@+id/dia_sem" />

        <TextView
            android:text="@string/fecha1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView19"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19" />

        <TextView
            android:text="aaaaaaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fech"
            android:layout_alignBaseline="@+id/textView21"
            android:layout_alignBottom="@+id/textView21"
            android:layout_toLeftOf="@+id/dia_sem"
            android:layout_toStartOf="@+id/dia_sem" />

        <TextView
            android:text="@string/hora1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:id="@+id/textView25"
            android:layout_below="@+id/textView21"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21" />

        <TextView
            android:text="aaaaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView25"
            android:layout_toRightOf="@+id/textView21"
            android:layout_toEndOf="@+id/textView21"
            android:id="@+id/hor" />

        <Button
            android:text="@string/guardar_cita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:id="@+id/guardar"
            android:width="200dp" />

    </RelativeLayout>
</RelativeLayout>
