<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modificacion_perfil_profesor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tutorius.tutorius.ModificacionPerfilProfesor">

    <include layout="@layout/activity_cabecera_profesor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombreCitaProf"
            android:layout_alignLeft="@+id/nombreCitaProf"
            android:layout_alignStart="@+id/nombreCitaProf"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="3dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/nombre" />

        <TextView
            android:text="@string/departamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:id="@+id/depCitaProf"
            android:textColor="?attr/actionMenuTextColor"
            android:layout_below="@+id/nombre"
            android:layout_alignLeft="@+id/nombreCitaProf"
            android:layout_alignStart="@+id/nombreCitaProf" />

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/nombreCitaProf"
            android:layout_alignParentTop="true"
            android:textColor="?attr/actionMenuTextColor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/depCitaProf"
            android:layout_toRightOf="@+id/nombre"
            android:layout_toEndOf="@+id/nombre"
            android:layout_marginTop="3dp"
            android:paddingLeft="15dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/departamento" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departamento"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:textColor="?attr/actionMenuTextColor"
            android:id="@+id/emailCitaProf" />

        <TextView
            android:layout_marginTop="3dp"
            android:id="@+id/email"
            android:layout_below="@+id/emailCitaProf"
            android:layout_toRightOf="@+id/nombre"
            android:layout_toEndOf="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_alignParentLeft="true" />


        <TextView
            android:text="@string/despacho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentLeft="true"
            android:textColor="?attr/actionMenuTextColor"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp"
            android:id="@+id/depachoCitaProf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:id="@+id/despacho"
            android:paddingLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/depachoCitaProf"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hourCitaProf"
            android:layout_alignLeft="@+id/despacho"
            android:layout_alignStart="@+id/despacho"
            android:layout_marginTop="11dp"
            android:paddingLeft="15dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/horario" />

        <ImageView
            android:layout_width="270px"
            android:layout_height="300px"
            app:srcCompat="@drawable/foto_user_por_defecto"
            android:id="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/emailCitaProf" />

        <Button
            android:text="@string/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editar"
            android:layout_below="@+id/email"
            android:drawableLeft="@drawable/editar2"
            android:drawablePadding="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disponibilidad"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/listasig"
            android:layout_below="@+id/textView13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/asignaturas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textColor="?attr/actionMenuTextColor"
            android:id="@+id/textView13"
            android:layout_below="@+id/horario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/actionMenuTextColor"
            android:id="@+id/hourCitaProf"
            android:layout_below="@+id/disponibilidad"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/disponibilidad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="?attr/actionMenuTextColor"
            android:layout_below="@+id/editar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />


    </RelativeLayout>


</RelativeLayout>
